fix button alignment in intro

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ h1 {
 .intro-message {
 	display:flex;
 	flex-direction: column;
+	align-items: center;
 	text-align: center;
 	padding: 0 0 2rem;
 }
